k8s/geoio-dep-sec-ing.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: geoip
spec:
  ports:
  - name: web
    port: 8080 
  selector:
    name: geoip

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoip 
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: geoip
  template:
    metadata:
      labels:
        name: geoip
    spec:
      containers:
      - name: geoip
        image: dharmendrakariya/geo:k8s
        ports:
        - containerPort: 8080
          name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
      proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
      proxy_set_header X-Forwarded-For "$remote_addr, $server_addr";
  name: geoip
spec:
  rules:
  - host: geoip.YourDomain.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geoip
            port: 
              name: web
